# mincaml

./: .gitignore  README.org  mincaml.cabal
app/: Main.hs
src/MinCaml/: Lexer.x
src/MinCaml/Syntax/: Id.hs  Term.hs  Type.hs
