name:                mincaml
version:             0.1.0.0
synopsis:            A haskell-implementation of mincaml (https://github.com/esumii/min-caml)
description:         Please see README.org
homepage:            https://github.com/sumitsahrawat/mincaml#readme
license:             BSD3
license-file:        LICENSE
author:              Sumit Sahrawat
maintainer:          therealsumit@gmail.com
copyright:           GPL3
category:             Compiler
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-tools:         alex
  other-modules:       MinCaml.Lexer
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable mincaml
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mincaml
                     , optparse-applicative
                     , mtl
  default-language:    Haskell2010

test-suite mincaml-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mincaml
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sumitsahrawat/mincaml
